# edf_viewer

./: .gitignore  LICENSE  README.md  ci-check.sh  pyproject.toml
edf_viewer/: __main__.py  app.py  callbacks.py
edf_viewer/models/: binary_reader.py  edf_models.py
src/edf_viewer/: __init__.py  __main__.py  app.py  callbacks.py
src/edf_viewer/models/: binary_reader.py  edf_models.py
src/tests/: test_edf_models.py
tests/: test_edf_models.py
