[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edf_viewer"
version = "0.1.0"
description = "A Python package for visualizing EDF files"
authors = [
    { name = "Bryce Hedelius", email = "bhedelius@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["edf_viewer"]

[tool.ruff]
line-length = 120
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edf_viewer"
version = "0.1.0"
description = "A Python package for visualizing EDF files"
authors = [
    { name = "Bryce Hedelius", email = "bhedelius@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["edf_viewer"]

[tool.ruff]
line-length = 120
