[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edf_viewer"
version = "0.1.0"
description = "A Python package for visualizing EDF files"
authors = [
    { name = "Bryce Hedelius", email = "bhedelius@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "numpy",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "black",
    "darglint",
    "mypy",
    "pytest",
    "ruff"
]

[tool.setuptools]
packages = ["edf_viewer"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
mypy_path = "src"